@@ -1,3 +1,9 @@
+2012-05-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Correct GTIFGetDefn() so that user defined
+	linear units are properly read.  Add user defined linear units
+	to definition report. (#51)
+
 2012-03-29  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Another crack at a 1.4.0 release.
